--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,20 +8,23 @@
   <nav class="navbar bg-dark navbar-expand-sm">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="#" class="nav-link">Home</a>
+        <a routerLink="home" class="nav-link">Home</a>
       </li>
       
       <li class="nav-item">
-        <a href="#" class="nav-link">Biographies</a>
+          <a routerLink="books/programming" class="nav-link">Programming</a>
+        </li>
+      <li class="nav-item">
+        <a  routerLink="books/biographies" class="nav-link">Biographies</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Business</a>
+        <a routerLink="books/business" class="nav-link">Business</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Sign Up</a>
+        <a routerLink="signup" class="nav-link">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Sign In</a>
+        <a routerLink="login" class="nav-link">Sign In</a>
       </li>
     </ul>
   </nav>
@@ -30,8 +33,12 @@
 <br>
 <!-- <book-list></book-list> -->
 <!-- <book-details></book-details> -->
-<customer-registration></customer-registration>
+<!-- <customer-registration></customer-registration> -->
 <!-- <customer-login></customer-login> -->
+<!-- <app-home></app-home>  -->
+<router-outlet>
+
+</router-outlet>
 <br>
 <br>
 <div class="container">
