Third Commit-Added Lifecycle Hook, Services as well

--- a/src/app/book/book-list.component.html
+++ b/src/app/book/book-list.component.html
@@ -1,31 +1,26 @@
 <div class="container">
-    <h4  style="background-color:rgb(126, 119, 119) ;color:white;text-align:center">
+    <h4 style="background-color:rgb(126, 119, 119) ;color:white;text-align:center">
         Books
     </h4>
 </div>
 <br>
 <div class="container">
-    <table class="table table-bordered" >
+    <table class="table table-bordered" *ngIf="books && books.length">
         <thead class="thead-light">
             <tr>
                 <th>Book Image</th>
-            
-                <th>
-                    Book Title
-                </th>
-                <th>
-                    Book Price
-                </th>
-                <th>
-                    Book Rating
-                </th>
+                <th>Book Title</th>
+                <th>Book Price</th>
+                <th>Book Rating</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let book of books">
                 <td>
-                    <img src="{{ book.imageUrl }}" height="120px" width="100px" />
+                    <a routerLink="/book/{{book.bookId}}">
+                        <img src="{{ book.imageUrl }}" height="120px" width="100px" />
+                    </a>
                 </td>
                 <td>
                     {{book.title}}
