--- a/src/app/customer/customer-registration.component.html
+++ b/src/app/customer/customer-registration.component.html
@@ -1,85 +1,77 @@
-<div class="container" style="width:45%">
-        <h4 class="text-center">Registration Form</h4>
-        <form>
-            <div class="form-group">
-                <label class="form-label">Name</label>
-                <input type="text" class="form-control" required>
-            </div>
-            
-            
-            <div class="form-group">
-                    <label class="form-label">Gender</label>&nbsp;&nbsp;
-                    <div class="form-check form-check-inline" >
-                            <input type="radio" name="gender" value="Male" class="form-check-input" />Male
-                    </div>                    
-                            <div class="form-check form-check-inline" >
-                                    <input type="radio" name="gender" value="Female" class="form-check-input" />Female
-                            </div>
-            </div>
-            <div class="form-group">
-                <label class="form-label">Email Id</label>
-                <input type="email" class="form-control" required />
-            </div>
-            
-            <div class="form-group">
-                    <label class="form-label">Contact</label>
-                    <input type="number" class="form-control" required>
-            </div>
-
-            <div class="form-group">
-
-                    <label class="form-label">State</label>
-                   
-                    <select required class="form-control">
-                   
-                    <option value="">--select--</option>
-                   
-                    <option value="Telangana">Telangana</option>
-                   
-                    <option value="Karnataka">Karnataka</option>
-                   
-                    <option value="Tamilnadu">Tamilnadu</option>
-                   
-                    <option value="Maharastra">Maharastra</option> 
-                   
-                    </select>
-                   
-                    </div>
-                   
-                    <div class="form-group">
-                   
-                    <label class="form-label">City</label>
-                   
-                    <select required class="form-control">
-                   
-                    <option value="">--select--</option>
-                   
-                    <option value="Hyderabad">Hyderabad</option>
-                   
-                    <option value="Mumbai">Mumbai</option>
-                   
-                    <option value="Chennai">Chennai</option>
-                   
-                    <option value="Nagpur">Nagpur</option> 
-                   
-                    </select>
-                   
-                    </div>
+<div class="container" style="width:40%">
+    <h4 class="text-center">Login Form</h4>
     
-                
-            
-                <div class="form-group">
-                    <label class="form-label">Postal Code</label>
-                    <input type="number" class="form-control" required />
-                </div>
-            
-                <div class="form-group">
-                        <label class="form-label">Password</label>
-                        <input type="password" class="form-control" required>
-                    </div>
-        
-                    
-                
-                <button type="submit" class="btn btn-block btn-secondary" >Submit</button>
-            </form>
+    <!-- {{customer|json}} -->
+<!-- Template variable  #customerForm is pointing to ngForm directive -->
+{{customerForm.value|json}}
+{{customerForm.form.valid}}
+    <form (ngSubmit)="registerNewCustomer" #customerForm="ngForm">
+        <div class="form-group">
+                <label class="form-label">Name:</label>
+                <input type="text" class="form-control" required [(ngModel)]="customer.name" name="customer_name"
+                 #name="ngModel" [class.is-invalid]="name.touched && name.invalid"/> 
         </div>
+        <div class="text-danger"[class.d-none]="name.valid || name.untouched">Name is required</div>
+        <div class="form-group">
+                <label class="form-label">Email Id:</label>
+                <input type="email" class="form-control" required [(ngModel)]="customer.email" name="email"
+                #email="ngModel" [class.is-invalid]="email.touched && email.invalid"/> 
+        </div>
+        <div class="text-danger"[class.d-none]="email.valid || email.untouched">Email is required</div>
+         
+        <div class="form-group">
+                <label class="form-label">Password:</label>
+                <input type="password" class="form-control" required [(ngModel)]="customer.password" name="password"/> 
+        </div>
+         <div class="form-group">
+                <label class="form-label">Contact:</label>
+                <input type="number" class="form-control" required [(ngModel)]="customer.contact"
+                pattern="^\d{10}$" name="contact" #phone="ngModel"
+                [class.is-invalid]="phone.touched && phone.invalid"/> 
+        </div>
+        <div *ngIf="phone.errors && phone.touched">
+
+            <div class="text-danger" *ngIf="phone.errors?.required">Phone no. is required</div>
+            <div class="text-danger" *ngIf="phone.errors?.pattern">Phone no. must be 10 digits</div>
+        </div>
+
+        <div class="form-group" >
+               <label class="form-label">Gender:</label>&nbsp;&nbsp;
+               <input type="radio" name="gender" value="Male" class="from-check-input" [(ngModel)]="customer.gender" />&nbsp; Male &nbsp;&nbsp;
+               <input type="radio" name="gender" value="Female" class="from-check-input" [(ngModel)]="customer.gender"/>&nbsp;Female  
+        </div>
+        <div></div>
+        <div class="form-group">
+                <label class="form-label">Address Line1:</label>
+                <input type="text" class="form-control" required [(ngModel)]="customer.address.addressLine1" name="addressLine1"/>
+        </div>
+        <div class="form-row" >
+        <div class="form-group col-5">
+                <label class="form-label">State:</label>
+                <select required class="form-control" [(ngModel)]="customer.address.State" name="state">
+                        <option value="">--select--</option>
+                        <option value="Telangana">Telangana</option>
+                        <option value="Karnataka">Karnataka</option>
+                        <option value="Tamilnadu">Tamilnadu</option>
+                        <option value="Maharastra">Maharastra</option>    
+                </select>
+        </div>
+        <div class="form-group col">
+                <label class="form-label">City:</label>
+                <select required class="form-control" [(ngModel)]="customer.address.city" name="city">
+                        <option value="">--select--</option>
+                        <option value="Hyderabad">Hyderabad</option>
+                        <option value="Mumbai">Mumbai</option>
+                        <option value="Chennai">Chennai</option>
+                        <option value="Nagpur">Nagpur</option>    
+                </select>
+        </div>
+        <div class="form-group col">
+                <label class="form-label">Postal Code:</label>
+                <input type="number" class="form-control" required [(ngModel)]="customer.address.postalCode" name="postalCode">
+        </div>
+        </div>
+        <button type="button" class="btn btn-secondary" [disabled]="customerForm.form.invalid">Sign Up</button><br>
+    </form>
+
+</div>
