--- a/src/app/customer/customer-registration.component.html
+++ b/src/app/customer/customer-registration.component.html
@@ -5,7 +5,7 @@
 <!-- Template variable  #customerForm is pointing to ngForm directive -->
 {{customerForm.value|json}}
 {{customerForm.form.valid}}
-    <form (ngSubmit)="registerNewCustomer" #customerForm="ngForm">
+    <form (ngSubmit)="registerNewCustomer()" #customerForm="ngForm">
         <div class="form-group">
                 <label class="form-label">Name:</label>
                 <input type="text" class="form-control" required [(ngModel)]="customer.name" name="customer_name"
@@ -71,7 +71,7 @@
                 <input type="number" class="form-control" required [(ngModel)]="customer.address.postalCode" name="postalCode">
         </div>
         </div>
-        <button type="button" class="btn btn-secondary" [disabled]="customerForm.form.invalid">Sign Up</button><br>
+        <button type="submit" class="btn btn-secondary" [disabled]="customerForm.form.invalid">Sign Up</button><br>
     </form>
 
 </div>
